--- a/BigSchool/BigSchool/Views/Courses/Create.cshtml
+++ b/BigSchool/BigSchool/Views/Courses/Create.cshtml
@@ -9,6 +9,7 @@
 @using (Html.BeginForm("Create", "Courses"))
 
 {
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
         @Html.TextBoxFor(m => m.Place, new { @class = "form-control" })
@@ -40,6 +41,11 @@
     <div class="form-group"></div>
     <div class="form-group"></div>
 
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval");
 }
 
 <!doctype html>
