--- a/BigSchool/BigSchool/Content/Site.css
+++ b/BigSchool/BigSchool/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse {
+    background-color: #505ab1;
+    border-color: #080808;
+}
+.navbar-inverse .navbar-nav > li > a{
+    color: black;
+}
+.navbar-inverse .navbar-brand{
+    color: blue;
+}
