--- a/BigSchool/BigSchool/Views/Home/Index.cshtml
+++ b/BigSchool/BigSchool/Views/Home/Index.cshtml
@@ -8,7 +8,21 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
+@model IEnumerable<BigSchool.Models.Course>
+    @{ 
+        ViewBag.Title = "Home Page";
+    }
+
 <div class="row">
+    <ul>
+        @foreach (var course in Model)
+        {
+            <li>
+                @course.DateTime - @course.Lecturer.Name
+            </li>
+        }
+    </ul>
+</div>
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
