--- a/BigSchool/BigSchool/Content/Site.css
+++ b/BigSchool/BigSchool/Content/Site.css
@@ -32,3 +32,24 @@ textarea {
 .navbar-inverse .navbar-brand{
     color: blue;
 }
+/*Coure layout*/
+.course{
+    list-style: none;
+}
+.course > li {
+    position: relative;
+    margin-bottom:30px;
+}
+.course > li .date{
+    text-align:center;
+    background-color: #d41d50;
+    color: white;
+    width: 60px;
+    border-radius: 8px;
+}
+
+.course > li .details {
+    position: absolute;
+    top: 0;
+    left: 70px;
+}
