--- a/BigSchool/BigSchool/Views/Home/Index.cshtml
+++ b/BigSchool/BigSchool/Views/Home/Index.cshtml
@@ -59,12 +59,47 @@
                 <div class="details">
                     <span class="lecturer">
                         @course.Lecturer.Name
+                        <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerID">Follow</button>
                     </span>
                     <span class="category">
                         @course.Category.Name
                     </span>
+                    <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
                 </div>
             </li>
         }
     </ul>
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $(".js-toggle-attendance").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+                .done(function () {
+                    button
+                    .removeClass("btn-default")
+                    .addClass("btn-info")
+                    .text("Going");
+                })
+                .fail(function () {
+                    alert("Something failed!");
+                });
+            });
+
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                .done(function () {
+                    button.text("Following");
+                })
+                .fail(function () {
+                    alert("Something failed");
+                });
+            });
+
+        });
+    </script>
+    }
     
