--- a/BigSchool/BigSchool/Views/Courses/Attending.cshtml
+++ b/BigSchool/BigSchool/Views/Courses/Attending.cshtml
@@ -7,6 +7,17 @@
 
 <h2>Attending</h2>
 
+<div class="row">
+    <ul>
+        @foreach (var course in Model.UpcommingCourses)
+        {
+            <li>
+                @course.DateTime - @course.Lecturer.Name
+            </li>
+        }
+    </ul>
+</div>
+
 <ul class="course">
     @foreach (var course in Model.UpcommingCourses)
     {
